@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* add BodySender to public API
 * bugfix: look for resources in super classes of the servlet
 * support nesting cops as cop parameters
 * cleanup of cops url generation
